# vendorneutralarchive

./: .gitignore  CLAUDE.md  CMakeLists.txt
apps/: CMakeLists.txt
apps/vna-receiver/: CMakeLists.txt  main.cpp
apps/vna-send/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  CODING_RULES.md  COMPLIANCE_SCOPE.md  DICOM_SCOPE.md  PROJECT_BRIEF.md  ROADMAP.md  RTM_SCOPE_ASSESSMENT.md  TESTING_STRATEGY.md
docs/adr/: 0001-use-dcmtk.md  0002-layered-architecture.md
docs/milestones/: 00-project-skeleton.md  01-domain-models.md  02-config-layer.md  03-dicom-file-reader.md  04-c-echo-scu.md  05-c-store-scp.md  06-local-storage.md  07-metadata-index.md  08-c-store-scu.md  09-c-find-scp.md  10-c-move-scp.md
src/: CMakeLists.txt
src/config/: CMakeLists.txt  CliParsing.cpp  CliParsing.h  ConfigError.h  ReceiverConfig.cpp  ReceiverConfig.h  SendConfig.cpp  SendConfig.h
src/dicom/: CMakeLists.txt  DicomFileReadError.h  DicomFileReader.cpp  DicomFileReader.h  EchoScu.cpp  EchoScu.h  EchoScuError.h  StoreScp.cpp  StoreScp.h  StoreScpError.h
src/domain/: AeTitle.cpp  AeTitle.h  CMakeLists.txt  DicomFile.cpp  DicomFile.h  DicomInstanceMetadata.cpp  DicomInstanceMetadata.h  DicomNode.cpp  DicomNode.h  DicomStatus.cpp  DicomStatus.h  DicomUid.cpp  DicomUid.h  EchoResult.cpp  EchoResult.h  StoreResult.cpp  StoreResult.h
src/storage/: CMakeLists.txt  InstanceStorage.h  LocalInstanceStorage.cpp  LocalInstanceStorage.h  StorageError.h
tests/unit/: CMakeLists.txt  dicom_file_reader_positive.cpp  dicom_file_reader_validation.cpp  dicom_uid_validation.cpp  local_instance_storage_validation.cpp  send_config_validation.cpp
tests/unit/fixtures/: positive_instance.dump.txt
